--- a/src/components/search-bar.css
+++ b/src/components/search-bar.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: 20px 0;
     background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 20px 20px 20px 20px;
+    border-radius: 20px;
     box-shadow: 0 4px rgba(0, 0, 0, 0.4);
   }
   
