--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,15 @@ body {
   background: linear-gradient(90deg, rgba(40,85,9,1) 0%, rgba(92,163,43,1) 100%);
 }
 
+.placeholder-wrapper {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 4px rgba(0, 0, 0, 0.4);
+  
+  color: #1f1818;
+  font-size: 1.2rem;
+  font-weight: 500;
+  
+  padding: 20px;
+  border-radius: 15px;
+  padding: 20px; 
+}
